<resources>
    <string name="app_name">Телефонная книга</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menuitem_edit">Редактировать</string>
    <string name="menuitem_delete">Удалить</string>
    <string name="hint_name_required">Имя (обязательно)</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_phone">Телефон</string>
    <string name="label_name">Имя:</string>
    <string name="label_email">E-Mail:</string>
    <string name="label_phone">Телефон:</string>
    <string name="confirm_title">Вы уверенны?</string>
    <string name="confirm_message">Этот контакт будет удален навсегда</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_delete">Удалить</string>
    <string name="contact_added">Контакт успешно добавлен</string>
    <string name="contact_not_added">Контакт не был добавлен из-за ошибки</string>
    <string name="contact_updated">Контакт обновлен</string>
    <string name="contact_not_updated">Контакт не был обновлен из-за ошибки</string>
    <string name="invalid_query_uri">Неверный запрос Uri:</string>
    <string name="invalid_insert_uri">Неверная вставка Uri:</string>
    <string name="invalid_update_uri">Неправильное обновление Uri:</string>
    <string name="invalid_delete_uri">Невозможно удалить Uri:</string>
    <string name="insert_failed">Вставка не удалась: s</string>

    <string name="menu_about">О программе</string>
    <string name="info_author">[Данные автора]</string>
    <string name="string_link">https://www.linkedin.com/</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Вход</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
